# the-light-app

./: .gitignore  CLAUDE.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  VISION_AND_ARCHITECTURE.md  package-lock.json  package.json  ubrn.config.yaml  wasm-crate.patch.toml
.claude/: settings.json
.claude/agents/: executor.md  planner.md  reviewer.md
.github/workflows/: ci.yml  deploy-web.yml
app/: .gitignore  app.config.js  app.json  metro.config.js  package-lock.json  package.json  react-native.config.js
app/app/: +html.tsx  _layout.tsx  about.tsx  index.tsx  passage.tsx  settings.tsx
app/components/: AiCostMeta.tsx  AiProviderNotice.tsx  DevotionalNudge.tsx  HomeStreak.tsx  HomeVerseOfDay.tsx  LanguageToggleButton.tsx  PassageResultView.tsx  ProviderNeedKeyCta.tsx  ProviderPicker.tsx  ReaderAskPanel.tsx  ReaderBookList.tsx  ReaderChapterGrid.tsx  ReaderChapterView.tsx  ReaderChatPanel.tsx  ReaderComparePanel.tsx  ReaderInterlinearPanel.tsx  ReaderParallelView.tsx  ReaderScopeBar.tsx  ReaderSearchResultItem.tsx  ReaderStudyPanel.tsx  ReaderVersePanel.tsx  ReaderVersionPicker.tsx  ReaderXrefPanel.tsx  ReadingDbBanner.tsx  ReadingSettingsSheet.tsx  ScopeStudySheet.tsx  SyncSettings.tsx  ThemeModeSelector.tsx  ThemeToggleButton.tsx  WasmGate.tsx
app/lib/: aiConfigure.ts  aiCost.ts  aiProviders.ts  attribution.ts  chapterNav.ts  contrast.ts  db.ts  db.web.ts  devotionalNudge.ts  devotionalNudgeState.ts  driveAuth.ts  driveSync.ts  engagementNudge.shared.ts  errMessage.ts  gestureNav.ts  hideOnScroll.ts  highlight.ts  highlightColors.ts  i18n.ts  keystore.shared.ts  keystore.ts  keystore.web.ts  notesExport.ts  passageQuery.ts  passageResolve.ts  planReminders.shared.ts  planReminders.ts  planReminders.web.ts  prefs.shared.ts  prefs.ts  prefs.web.ts  readingDbLoad.ts  readingDbLoad.web.ts  readingLayout.ts  readingNav.ts  readingPrefs.ts  readingStreak.ts  recentSearches.ts  searchIntent.ts  searchNormalize.ts  (+39 more)
app/public/: manifest.webmanifest  sw.js
app/scripts/: run-guards.mjs
app/web/: ai-anchored.web.ts  ask-selftest.ts  ask-selftest.web.ts  assets.d.ts  chat-selftest.ts  chat-selftest.web.ts  compare-selftest.ts  compare-selftest.web.ts  export-selftest.ts  export-selftest.web.ts  notes-selftest.ts  notes-selftest.web.ts  passage.ts  passage.web.ts  plans-fs.web.ts  plans-selftest.ts  plans-selftest.web.ts  reading-selftest.ts  reading-selftest.web.ts  reading.ts  reading.web.ts  reference.ts  reference.web.ts  research.web.ts  search-selftest.ts  search-selftest.web.ts  selftest.ts  session.web.ts  sqlite-lexicon-opfs.web.ts  sqlite-lexicon.web.ts  sqlite-opfs.web.ts  sqlite-reading-opfs.web.ts  sqlite-reading.web.ts  sqlite-search.web.ts  sqlite-xref.web.ts  sqlite.web.ts  sqliteMemVfs.web.ts  study-selftest.ts  study-selftest.web.ts  study.web.ts  (+6 more)
assets/data/: sample.sqlite
core/: Cargo.toml
core/examples/: ask_real.rs  gen_reading_sample_db.rs  gen_sample_db.rs  study_real.rs
core/src/: lib.rs
games/tron/: README.md  index.html
loop/: AUDIT.md  HALT  HEARTBEAT  JOURNAL.md  PROMPTS.md  PROTOCOL.md  STATUS.md
loop/archive/: F0.0-confirm-toolchain.task.md  F0.0.executor-notes.md  F0.0.result.md  F0.1.result.md  F0.10.result.md  F0.11-marco-0.task.md  F0.11.result.md  F0.2-core-uniffi-compila.task.md  F0.2.result.md  F0.3.result.md  F0.4.result.md  F0.5.result.md  F0.6b-bindings-web-wasm.task.md  F0.6b.attempt1.result.md  F0.6b.result.md  F0.6c.result.md  F0.7.result.md  F0.8-ligar-core-android.task.md  F0.8.result.md  F0.9.result.md  F1.1-pipeline-banco-embarcado.task.md  F1.1.result.md  F1.10-notas-fronteira.task.md  F1.10.result.md  F1.11-ui-notas-export.task.md  F1.11.result.md  F1.13-web-leitura.task.md  F1.13.result.md  F1.14-web-busca.task.md  F1.14.result.md  F1.15-web-xref.task.md  F1.15.result.md  F1.16-web-notas.task.md  F1.16.result.md  F1.17.result.md  F1.2-leitura-core.task.md  F1.2.result.md  F1.3-ui-leitura-nativa.task.md  F1.3.result.md  F1.4.result.md  (+157 more)
loop/audits/: 2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md
loop/backlog/: PHASE-0.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5-refinement.md  PHASE-5.md  PHASE-6.md
loop/done/: F0.6.result.md
loop/perf/: BUDGET.md  SERVING.md  web-bundle-baseline.json  web-bundle-budget.json
loop/proposals/: the-light-PR-ai-pure-study.md  the-light-PR-feature-gating.md  the-light-PR-native-sse-streaming.md
loop/queue/: F0.1-bootstrap-repo.task.md  F0.10-store-web-wa-sqlite.task.md  F0.2-core-uniffi-compila.task.md  F0.3-parse-reference.task.md  F0.4-gen-bindings.task.md  F0.5-expo-app-minimo.task.md  F0.6-ligar-core-web-wasm.task.md  F0.6b-bindings-web-wasm.task.md  F0.6c-alinhar-uniffi-0310.task.md  F0.7-ligar-core-ios.task.md  F0.8-ligar-core-android.task.md  F0.9-store-nativo.task.md  F1.1-pipeline-banco-embarcado.task.md  F1.12-gate-store-web-corpus.task.md  F1.17-marco-1.task.md  F1.2-leitura-core.task.md  F1.3-ui-leitura-nativa.task.md  F1.4-ui-versoes-tema.task.md  F1.5-busca-fts5.task.md  F1.6-ui-busca-nativa.task.md  F1.7-dados-xref.task.md  F1.8-xref-fronteira.task.md  F2.3-pr-core-gemini-streaming.task.md  F2.7b-ui-web-ia.task.md  F3.10-validacao-real-estudo.task.md  F3.11-pr-core-ai-pure-estudo.task.md  F3.9-gate-pesquisa-web-paridade.task.md  F4.2-transporte-web-multi-provedor.task.md  F4.4-tavily-web-fetch.task.md  F4.6-pr-streaming-nativo-sse.task.md  F5.1-fronteira-expor-gera-o-de-planos-de-leitura-.task.md  F5.11-i18n-paineis-ia.task.md  F5.12-remover-assets-mortos-split-passage.task.md  F5.13-lembretes-locais-plano.task.md  F5.14-persistir-tema.task.md  F5.15-lexico-on-demand.task.md  F5.16-i18n-componentes-restantes-guarda.task.md  F5.18-wcag-contraste-tema.task.md  (+39 more)
scripts/: build-wa-sqlite-fts5.sh  check-web-bundle-budget.sh  compress-web-assets.sh  gen-bible-db.sh  gen-bindings-android.sh  gen-bindings-ios.sh  gen-bindings-ts.sh  gen-bindings-web.sh  gen-bindings.sh  gen-reading-sample-db.sh  gen-sample-db.sh  gen-search-wordlist.mjs  measure-web-bundle.sh  run-android-selftest.sh  run-ios-selftest.sh  run-loop.sh
(+126 files in other folders)
