[package]
name = "the-light-app-core"
version = "0.1.0"
edition = "2021"
publish = false

# Fronteira UniFFI do app. Esqueleto mínimo (F0.2): apenas prova que um crate
# Rust com UniFFI compila/formata/passa clippy+test neste ambiente. SEM lógica
# de produto e SEM dependência do core externo ainda (resolvida na F0.3).

[lib]
# `lib` para os testes Rust; `cdylib`/`staticlib` para a ponte nativa/WASM das
# tarefas futuras (F0.4+). Já deixamos os três prontos.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Caminho UniFFI escolhido: modo *library* (proc-macros + setup_scaffolding!),
# sem UDL e sem build.rs. Versão FIXADA com pin EXATO (=) — re-alinhada de
# "0.31.2" para "=0.31.0" por compatibilidade com o runtime web do ubrn 0.31.0-3
# (uniffi_core "=0.31.0"). Ver ADR-0003 (nota) e ADR-0006.
uniffi = "=0.31.0"
# Display/std::error::Error do enum de erro UniFFI (padrão da fronteira).
thiserror = "2.0.18"
# Core canônico do The Light, consumido como git dep PINADA por commit
# (ADR-0002). É a ÚNICA fonte de verdade do parsing de referência: a fronteira
# UniFFI delega a `the_light_core::reference` (regra "uma fonte da verdade").
# Nunca forkar/copiar/vendorizar — mudanças no core só via PR + ADR.
#
# rev 8f66004: introduz a feature `embedded` (default-on) no core — ver
# the-light-app ADR-0005. Aqui consumimos com `default-features = false`: por
# PADRÃO só o núcleo PURO (model + reference), que compila para wasm32 (alvo web).
# No nativo, a feature `embedded` é religada no bloco [target...] abaixo (matriz
# de features por alvo).
the-light-core = { git = "https://github.com/butkeraites/the-light", rev = "8f6600460c3680a537d2f5df81b6980ed7e630d5", package = "the-light-core", default-features = false }

# Matriz de features por alvo (ADR-0005). No NATIVO (não-wasm), habilita a feature
# `embedded` do core (store SQLite + rede), necessária quando a fronteira passar a
# expor store/IA. No WEB (wasm32), fica puro (bloco acima, sem `embedded`) — sem
# arrastar rusqlite/reqwest, permitindo o build wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
the-light-core = { git = "https://github.com/butkeraites/the-light", rev = "8f6600460c3680a537d2f5df81b6980ed7e630d5", package = "the-light-core", default-features = false, features = ["embedded"] }
