[package]
name = "the-light-app-core"
version = "0.1.0"
edition = "2021"
publish = false

# Fronteira UniFFI do app. Esqueleto mínimo (F0.2): apenas prova que um crate
# Rust com UniFFI compila/formata/passa clippy+test neste ambiente. SEM lógica
# de produto e SEM dependência do core externo ainda (resolvida na F0.3).

[lib]
# `lib` para os testes Rust; `cdylib`/`staticlib` para a ponte nativa/WASM das
# tarefas futuras (F0.4+). Já deixamos os três prontos.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Caminho UniFFI escolhido: modo *library* (proc-macros + setup_scaffolding!),
# sem UDL e sem build.rs. Versão FIXADA com pin EXATO (=) — re-alinhada de
# "0.31.2" para "=0.31.0" por compatibilidade com o runtime web do ubrn 0.31.0-3
# (uniffi_core "=0.31.0"). Ver ADR-0003 (nota) e ADR-0006.
uniffi = "=0.31.0"
# Display/std::error::Error do enum de erro UniFFI (padrão da fronteira).
thiserror = "2.0.18"
# Core canônico do The Light, consumido como git dep PINADA por commit
# (ADR-0002). É a ÚNICA fonte de verdade do parsing de referência: a fronteira
# UniFFI delega a `the_light_core::reference` (regra "uma fonte da verdade").
# Nunca forkar/copiar/vendorizar — mudanças no core só via PR + ADR.
#
# rev 225b8c9: rev 2fc2dab + geração PURA de planos de leitura exposta sob `ai-pure`
# (`userdata::plans::{available_plans, plan_by_id, Plan, PlanProgress, day_index_for}`
# compiláveis em wasm; `PlanStore`/fs seguem embedded) → paridade WEB dos planos
# (PR F5.10/ADR-0037). Não-quebrante; grafo wasm segue puro.
# Anterior — rev 2fc2dab: rev 04b9b24 + streaming NATIVO real por provedor (override de
# `LlmProvider::complete_stream` com SSE p/ anthropic/openai/gemini e NDJSON p/ ollama;
# embedded-only, não-quebrante, zero-drift; PR F4.6/ADR-0035). Assinatura de
# `complete_stream` INALTERADA → fronteira/bindings não mudam (só N tokens reais).
# Anterior — rev 04b9b24: rev c8ecb2f + feature `ai-pure` ESTENDIDA p/ a superfície pura do ESTUDO
# (study prompt/citação/to_academic_markdown/WebSource compiláveis em wasm; PR F3.11/ADR-0030).
# Anterior — rev c8ecb2f: feature `ai-pure` (partes PURAS do `ai` compiláveis em
# wasm) + fix `default_model` gemini→2.5-flash (PR sancionado da F2.7 / ADR-0024).
# Aqui, no WEB (default-features=false), ligamos `features = ["ai-pure"]`: o wasm ganha
# a montagem de prompt/RAG + `ask` ancorado + `citation` (anti-alucinação) em Rust —
# SEM arrastar rusqlite/reqwest (só a chamada HTTP no web é `fetch`, F2.7b). No nativo,
# a feature `embedded` (que inclui `ai-pure`) é religada no bloco [target...] abaixo.
the-light-core = { git = "https://github.com/butkeraites/the-light", rev = "8c80bdac3936638d3a73d84bf1f321fdd4004882", package = "the-light-core", default-features = false, features = ["ai-pure"] }

# Matriz de features por alvo (ADR-0005). No NATIVO (não-wasm), habilita a feature
# `embedded` do core (store SQLite + rede), necessária quando a fronteira passar a
# expor store/IA. No WEB (wasm32), fica puro (bloco acima, sem `embedded`) — sem
# arrastar rusqlite/reqwest, permitindo o build wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
the-light-core = { git = "https://github.com/butkeraites/the-light", rev = "8c80bdac3936638d3a73d84bf1f321fdd4004882", package = "the-light-core", default-features = false, features = ["embedded"] }
